# comptime

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  all.h  comptime.c  test.sh
src/: all.h  comptime.c  main.rs
test/: comptime.h  expr.c  io.c.comptime_expected  main.c  main.c.comptime_expected  test.c  test_expanded_expected.c
