[package]
name = "comptime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
libc = "0.2.153"
libffi = { version = "3.2.0", features = ["system"] }
once_cell = "1.19.0"
tempfile = "3.10.1"
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.8"

[dev-dependencies]
prettydiff = "0.6.4"
